tests/paczka1/small_fuzzy/62468339.err
Error in line 3: sAY8x3 A305 34,2
Error in line 10: gd07>fTiU S594 >6,0
Error in line 7: sAY8x3 S205 36,7
Error in line 11: sAY8x3 A305 45,9
